# arquitectura_software

ball_and_goal/: CMakeLists.txt
ball_and_goal/fsm/: ball_and_goal_bica.cpp
ball_and_goal/include/ball_and_goal/: BallAndGoalBica.h  FindBall.h  FindBlueGoal.h  FindYellowGoal.h  Turn.h
ball_and_goal/launcher/: ball_and_goal.launch
ball_and_goal/src/: ball_and_goal_node.cpp  find_ball_node.cpp  find_blue_goal_node.cpp  find_yellow_goal_node.cpp  turn_node.cpp
ball_and_goal/src/ball_and_goal/: BallAndGoalBica.cpp  FindBall.cpp  FindBlueGoal.cpp  FindYellowGoal.cpp  Turn.cpp
behavior_hospital/: CMakeLists.txt  package.xml
behavior_hospital/behavior_trees_xml/: hospital_tree.xml
behavior_hospital/config/: params_config.launch  rviz_config.rviz
behavior_hospital/fsm/: Behavior_hospital.bica  Behavior_hospital.h
behavior_hospital/include/Behavior_hospital/: Behavior_hospital_impl.h  Find_object.h  Go_goal.h
behavior_hospital/include/behavior_hospital/: darknet_detector.h  find_approach.h  find_object.h  go_room.h  is_room.h  rgbd_distance.h
behavior_hospital/launch/: Behavior_hospital.launch  dark_config.launch  params_config.launch
behavior_hospital/src/: behavior_hospital_node.cpp  darknet_node.cpp  node_rgbd_distance.cpp
behavior_hospital/src/Behavior_hospital/: Behavior_hospital_impl.cpp  Find_object.cpp  Go_goal.cpp
behavior_hospital/src/behavior_hospital/: Behavior_hospital_impl.cpp  Find_object.cpp  Go_goal.cpp  darknet_detector.cpp  find_approach.cpp  find_object.cpp  go_room.cpp  is_room.cpp  rgbd_distance.cpp
behaviour_hospital/: CMakeLists.txt
behaviour_hospital/config/: points_params.yaml
behaviour_hospital/fsm/: Behavior_hospital.cpp
behaviour_hospital/src/: node_rgbd_distance.cpp
bumper/src/: bumper_robot.cpp
hospital_navigation/: CMakeLists.txt  package.xml
hospital_navigation/launch/: localization.launch  navigation.launch
hospital_navigation/launch/includes/: CMakeLists.txt  navigation.launch
hospital_navigation/launch/includes/maps/: map.yaml
hospital_navigation/launch/includes/src/: navigation.cpp
hospital_navigation/maps/: clase.pgm  clase.yaml  map_hospital.pgm  map_hospital.yaml
hospital_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
hospital_navigation/params/: points_params.yaml
hospital_navigation/src/: navigation.cpp  navigation_kobuki.cpp  navigation_once.cpp  navigation_secuencial.cpp  publish_points.cpp
